--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,17 @@ Description: Companion to ccesMRPprep
 Encoding: UTF-8
 LazyData: true
 Depends: 
-    R (>= 2.10),
+    R (>= 2.10)
+Imports:
+  brms,
+  dplyr,
+  readr,
+  tibble,
+  tidyr (>= 1.0.0),
 Language: en-US
 Roxygen: list(markdown = TRUE)
 License: GPL (>= 3)
 URL: https://www.github.com/kuriwaki/ccesMRPrun
 BugReports: http://github.com/kuriwaki/ccesMRPrun/issues
 VignetteBuilder: knitr
+RoxygenNote: 7.1.0
