--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,15 +13,14 @@ LazyData: true
 Depends: 
     R (>= 2.10)
 Imports:
-  brms,
-  dplyr,
-  readr,
-  tibble,
-  tidyr (>= 1.0.0),
+    brms,
+    dplyr,
+    readr,
+    tibble,
+    tidyr (>= 1.0.0)
 Language: en-US
 Roxygen: list(markdown = TRUE)
 License: GPL (>= 3)
 URL: https://www.github.com/kuriwaki/ccesMRPrun
 BugReports: http://github.com/kuriwaki/ccesMRPrun/issues
-VignetteBuilder: knitr
 RoxygenNote: 7.1.0
