--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(poststrat_draws)
 export(summ_sims)
 importFrom(brms,brm)
 importFrom(brms,pp_expect)
+importFrom(brms,prior_string)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
