--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(poststrat_draws)
 export(prior_pd_binomial)
 export(summ_sims)
 importFrom(brms,brm)
-importFrom(brms,pp_expect)
+importFrom(brms,posterior_epred)
 importFrom(brms,prior_string)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,filter)
