--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(summ_sims)
 importFrom(brms,brm)
 importFrom(brms,posterior_epred)
 importFrom(brms,prior_string)
+importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
