--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export(fit_brms_binomial)
 export(pivot_celldraws_longer)
 export(poststrat_draws)
 export(prior_pd_binomial)
+export(scatter_45)
 export(summ_sims)
+import(ggplot2)
 importFrom(brms,brm)
 importFrom(brms,posterior_epred)
 importFrom(brms,prior_string)
@@ -17,6 +19,10 @@ importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,summarize)
+importFrom(ggrepel,geom_text_repel)
+importFrom(glue,glue)
 importFrom(readr,parse_number)
+importFrom(scales,percent)
+importFrom(stringr,str_c)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,pivot_longer)
