--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ importFrom(ggrepel,geom_text_repel)
 importFrom(glue,glue)
 importFrom(readr,parse_number)
 importFrom(scales,percent)
+importFrom(scales,percent_format)
 importFrom(stringr,str_c)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,pivot_longer)
