--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(glue,glue)
 importFrom(readr,parse_number)
 importFrom(scales,percent)
 importFrom(scales,percent_format)
+importFrom(stats,quantile)
 importFrom(stringr,str_c)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,pivot_longer)
