Allow facet by in scatter_45

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ importFrom(ccesMRPprep,build_counts)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,enquo)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,matches)
@@ -24,10 +25,14 @@ importFrom(dplyr,rename)
 importFrom(dplyr,summarize)
 importFrom(ggrepel,geom_text_repel)
 importFrom(glue,glue)
+importFrom(purrr,is_formula)
 importFrom(readr,parse_number)
 importFrom(scales,percent)
 importFrom(scales,percent_format)
 importFrom(stats,quantile)
 importFrom(stringr,str_c)
+importFrom(stringr,str_replace)
+importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
+importFrom(tibble,enframe)
 importFrom(tidyr,pivot_longer)
