--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(brms,brm)
 importFrom(brms,posterior_epred)
 importFrom(brms,prior_string)
 importFrom(ccesMRPprep,build_counts)
+importFrom(dplyr,`%>%`)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,bind_cols)
@@ -20,6 +21,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,summarize)
@@ -30,6 +32,7 @@ importFrom(readr,parse_number)
 importFrom(scales,percent)
 importFrom(scales,percent_format)
 importFrom(stats,quantile)
+importFrom(stats,terms)
 importFrom(stringr,str_c)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_trim)
