--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ importFrom(scales,percent_format)
 importFrom(stats,quantile)
 importFrom(stats,terms)
 importFrom(stringr,str_c)
+importFrom(stringr,str_remove)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
