--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -36,7 +36,7 @@ jobs:
         run: |
           remotes::install_deps(dependencies = TRUE)
           install.packages("pkgdown", type = "binary")
-          remotes::install_cran(c("rmarkdown", "tidyverse", "knitr"))
+          remotes::install_cran(c("rmarkdown", "tidyverse", "knitr", "patchwork"))
         shell: Rscript {0}
 
       - name: Install package
