--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,10 +22,12 @@ importFrom(dplyr,bind_cols)
 importFrom(dplyr,enquo)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,pull)
+importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
 importFrom(dplyr,summarize)
 importFrom(ggrepel,geom_text_repel)
