--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: ccesMRPrun
 Type: Package
-Title: Fitting MRP Models from Cleaned Data and Drawing Estimates
+Title: Fitting and Visualizing MRP Models from Cleaned CCES and Census Data
 Version: 0.0.5
 Authors@R: person(given = "Shiro",
              family = "Kuriwaki",
-             role = c("aut", "cre"),
+             role = c("aut", "cre", "cph"),
              email = "shirokuriwaki@gmail.com",
              comment = c(ORCID = "0000-0002-5687-2647"))
 Description: Companion to ccesMRPprep
@@ -31,7 +31,7 @@ Remotes:
     kuriwaki/ccesMRPprep
 Language: en-US
 Roxygen: list(markdown = TRUE)
-License: GPL (>= 3)
+License: MIT + file LICENSE
 URL: https://www.github.com/kuriwaki/ccesMRPrun
 BugReports: http://github.com/kuriwaki/ccesMRPrun/issues
 RoxygenNote: 7.1.1
