Add bunch of arguments to scatter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,summarize)
 importFrom(ggrepel,geom_text_repel)
 importFrom(glue,glue)
+importFrom(lemon,facet_rep_wrap)
 importFrom(purrr,is_formula)
 importFrom(readr,parse_number)
 importFrom(scales,percent)
