Initial cut of posthoc correction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,14 @@ export(fit_brms)
 export(fit_brms_binomial)
 export(mrp_onestep)
 export(pivot_celldraws_longer)
+export(posthoc_intercept)
 export(poststrat_draws)
 export(prior_pd_binomial)
 export(scatter_45)
 export(summ_sims)
 import(ggplot2)
 importFrom(Formula,as.Formula)
+importFrom(arm,invlogit)
 importFrom(brms,brm)
 importFrom(brms,posterior_epred)
 importFrom(brms,prior_string)
