Complete example that works and rearrange terms in FindDelta

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(direct_ests)
 export(error_lbl)
 export(fit_brms)
 export(fit_brms_binomial)
+export(logit_ghitza)
 export(mrp_onestep)
 export(pivot_celldraws_longer)
 export(posthoc_intercept)
