--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -34,6 +34,11 @@ reference:
       - summ_sims
       - error_lbl
 
+  - title: Calibration
+    contents:
+      - posthoc_intercept
+      - posthoc_error
+
   - title: Example Datasets
     contents:
     - cces_GA
