--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(fit_brms_binomial)
 export(logit_ghitza)
 export(mrp_onestep)
 export(pivot_celldraws_longer)
+export(posthoc_error)
 export(posthoc_intercept)
 export(poststrat_draws)
 export(prior_pd_binomial)
