--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ importFrom(dplyr,n)
 importFrom(dplyr,pull)
 importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
+importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(ggrepel,geom_text_repel)
 importFrom(glue,glue)
