--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(pivot_celldraws_longer)
 export(posthoc_error)
 export(posthoc_intercept)
 export(poststrat_draws)
+export(poststrat_onestep)
 export(prior_pd_binomial)
 export(summ_sims)
 importFrom(Formula,as.Formula)
