--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(poststrat_draws)
 export(poststrat_onestep)
 export(prior_pd_binomial)
 export(summ_sims)
+import(dtplyr)
 importFrom(Formula,as.Formula)
 importFrom(brms,brm)
 importFrom(brms,posterior_epred)
@@ -20,6 +21,7 @@ importFrom(ccesMRPprep,build_counts)
 importFrom(dplyr,`%>%`)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
@@ -31,6 +33,7 @@ importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
+importFrom(dtplyr,lazy_dt)
 importFrom(glue,glue)
 importFrom(readr,parse_number)
 importFrom(stats,quantile)
