--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,17 @@
 Package: ccesMRPrun
 Type: Package
 Title: Fitting and Diagnosing MRP Models from Cleaned CCES and Census Data
-Version: 0.0.7
-Authors@R: person(given = "Shiro",
+Version: 0.0.8
+Authors@R: c(person(given = "Shiro",
              family = "Kuriwaki",
              role = c("aut", "cre", "cph"),
              email = "shirokuriwaki@gmail.com",
-             comment = c(ORCID = "0000-0002-5687-2647"))
+             comment = c(ORCID = "0000-0002-5687-2647")),
+            person(given = "Soichiro",
+             family = "Yamauchi",
+             role = c("aut"),
+             email = "syamauchi@g.harvard.edu",
+             comment = c(ORCID = "0000-0003-0554-2717"))),
 Description: Companion to ccesMRPprep
 Encoding: UTF-8
 LazyData: true
