--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Authors@R: c(person(given = "Shiro",
              family = "Yamauchi",
              role = c("aut"),
              email = "syamauchi@g.harvard.edu",
-             comment = c(ORCID = "0000-0003-0554-2717"))),
+             comment = c(ORCID = "0000-0003-0554-2717")))
 Description: Companion to ccesMRPprep
 Encoding: UTF-8
 LazyData: true
