--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dtplyr,lazy_dt)
 importFrom(glue,glue)
+importFrom(purrr,map2)
 importFrom(purrr,map_dbl)
 importFrom(readr,parse_number)
 importFrom(stats,quantile)
