--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ importFrom(glue,glue)
 importFrom(purrr,map2)
 importFrom(purrr,map_dbl)
 importFrom(readr,parse_number)
+importFrom(rlang,syms)
 importFrom(stats,quantile)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,pivot_longer)
