--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ importFrom(Formula,as.Formula)
 importFrom(brms,brm)
 importFrom(brms,posterior_epred)
 importFrom(brms,prior_string)
+importFrom(brms,threading)
 importFrom(ccesMRPprep,build_counts)
 importFrom(dplyr,`%>%`)
 importFrom(dplyr,across)
